--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,6 +1,6 @@
 {
   "extends": "@electron-toolkit/tsconfig/tsconfig.node.json",
-  "include": ["electron.vite.config.*", "./src/**/*"],
+  "include": ["electron.vite.config.*", "./src/preload/**/*", "./src/main/**/*" ],
   "compilerOptions": {
     "composite": true,
     "types": ["electron-vite/node"],
